--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "@types/react-transition-group": "^4.4.6"
   }
 }
